--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+    <title>IA</title>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-   Hello
-   there
-   .
+  <h1>Hello, code School!</h1>
+  <ul>
+    <li>JavaScript</li>
+    <li>AngularJS</li>    
+  </ul>
   </body>
 </html>
